<resources>
    <string name="app_name">DRUG-APP</string>
    <string name="email">Enter your Email</string>
    <string name="password">Enter your Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot">Forgot Password</string>
    <string name="signup">Recycler view</string>
    <string name="camera">CAMERA</string>
    <string name="gallery">OPEN GALLERY</string>
    <string name="process">PROCESS IMAGE</string>
    <string name="question">Forgot your password?</string>
    <string name="message">To reset password, enter your email, press the button and
    check the mail to follow instructions</string>
    <string name="email1">Your email here</string>
    <string name="passwordReset">RESET PASSWORD</string>
    <string name="back">BACK</string>
    <string name="account">Already have an account? Login</string>
    <string name="use">Use this app correctly</string>
    <string name="cast">BroadCast</string>
    <string name="download">Download</string>
    <string name="parse">Parser</string>
    <string name="showtext"></string>
    <string name="add">Add User</string>

    <string name="sign">View Users</string>
    <string name="Add_New">Add New</string>
    <string name="edit">Edit Contact</string>
    <string name="delete">Delete Contact</string>
    <string name="title_activity_display_contact">DisplayContact</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>

    <string name="street">Street</string>
    <string name="country">City/State/Zip</string>
    <string name="save">Save Contact</string>
    <string name="deleteContact">Are you sure, you want to delete it.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="db">Users List</string>

    <string name="enter_name">Username</string>
    <string name="add_record">Add User</string>
    <string name="btn_update">Update</string>
    <string name="btn_delete">Delete</string>
    <string name="empty_list_text">No records found</string>
    <string name="enter_desc">Password</string>
    <string name="enter_title">Email</string>
    <string name="not">Hi, Your Detailed notification view goes here....</string>

    <string name="display_content">DISPLAY CONTENT</string>
    <string name="usage_instructions">This is Android Content Provider Application that shared its data with other apps. To test or access this data, you must install the second application and use it to query and insert data</string>
    <string name="dictionary_provide_permission">com.test.anotherapp.DICTIONARY_PROVIDER_PERMISSION</string>
</resources>
