<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="60sp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        />
    <ImageView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginLeft="50dp"
        android:src="@drawable/ic_visibility_black_24dp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:text="@string/cast"
        android:textSize="30sp"
        android:textColor="@color/colorPrimary"
        android:background="@color/grey"
        android:id="@+id/castbtn"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:textSize="15sp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/email1"
        android:textSize="30sp"
        android:textColor="@color/colorPrimary"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:text="@string/passwordReset"
        android:textSize="30sp"
        android:textColor="@color/colorPrimary"
        android:background="@color/grey"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/back"
        android:textSize="30sp"
        android:textColor="@color/colorPrimary"
        android:background="@color/grey"
        android:layout_marginLeft="150dp"
        />

</LinearLayout>