<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="60sp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        />
    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginLeft="50dp"
        android:src="@drawable/ic_visibility_black_24dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/email"
        android:textSize="30sp"
        android:textColor="@color/colorPrimary"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/password"
        android:textSize="30sp"
        android:textColor="@color/colorPrimary"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/signup"
        android:textSize="30sp"
        android:textColor="@color/colorPrimary"
        android:background="@color/white"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/account"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:background="@color/white"
        />
</LinearLayout>