<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"

        android:layout_marginLeft="100dp"
        android:src="@drawable/ic_visibility_black_24dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/login"
        android:textSize="20sp"
        android:textColor="@color/red"
        android:background="@color/white"
        android:id="@+id/loginbtn"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/forgot"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:background="@color/white"
        android:id="@+id/forgot"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/signup"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:background="@color/white"
        android:id="@+id/recyclerview"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/parse"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:background="@color/white"
        android:id="@+id/parse"
        />

</LinearLayout>